fix bug to make sure buttons and heading can be clicked (fix z-index bug)

--- a/src/index.css
+++ b/src/index.css
@@ -111,12 +111,21 @@ code {
 
 .primary-header, .hero {
   --parallax-speed: 10;
-  z-index: 10;
+  z-index: 6;
+}
+
+.main-header {
+  --parallax-speed: 0;
+  z-index: 99;
+}
+
+.hero {
+  z-index: 50;
 }
 
 .parallax_bg {
-  --parallax-speed: -1;
-  z-index: 1;
+  --parallax-speed: 0;
+  z-index: -50;
   min-height: 100%;
   width: 100%;
   object-fit: cover;
@@ -124,32 +133,32 @@ code {
 
 .parallax_dust {
   --parallax-speed: -10;
-  z-index: 2;
+  z-index: -2;
 }
 
 .parallax_luna {
-  --parallax-speed: 8;
-  z-index: 3;
+  --parallax-speed: 4;
+  z-index: 4;
 }
 
 .parallax_manny {
   --parallax-speed: 6;
-  z-index: 4;
+  z-index: 2;
 }
 
 .parallax_jax {
-  --parallax-speed: 4;
+  --parallax-speed: 5;
   z-index: 5;
 }
 
 .parallax_rays {
-  --parallax-speed: 3;
-  z-index: 3;
+  --parallax-speed: 4;
+  z-index: -1;
 }
 
 .parallax_foreground-front,
 .parallax_foreground-back {
-  z-index: 999;
+  z-index: 0;
   align-self: end;
 }
 
@@ -168,7 +177,7 @@ code {
 
 .main-content {
   position: relative;
-  z-index: 1;
+  z-index: 99;
   background: hsl(238, 100%, 6%);
   padding-block: 6rem;
 }
@@ -180,16 +189,17 @@ code {
 
 .primary-header {
   padding-block: 2rem;
+  z-index: 99
 }
 
-.primary-header__inner {
+.primary-header_inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .hero_title {
-  font-size: 4rem;
+  font-size: 8rem;
   max-width: 10ch;
   line-height: 1;
   font-style: italic;
